--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,10 +13,10 @@ body {
   max-width: 1100px;
   margin: auto;
 
-  // @media screen and (max-width: 360px) {
-  //   padding-left: 16px;
-  //   padding-right: 16px;
-  // }
+  @media screen and (max-width: 1130px) {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 .rating-variables {
   --stars-base: 5;
@@ -37,17 +37,149 @@ header {
 
   .wrapper {
     @include flex_horizonAlign(space-between);
+    position: relative;
 
-    .logo-box {
-      @include flex_verticalAlign(center);
-      gap: 4px;
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 20px;
 
-      .logo-title {
-        font-family: 'odibee_sans-regular';
-        font-size: 29px;
-        color: #272626;
+      .menu-btn {
+        @include flex_AlignBooth(center, center);
+        --icon-width: 25px;
+        width: calc(var(--icon-width));
+        height: calc(var(--icon-width));
+        flex-direction: column;
+        transition: all calc(100ms + var(--transition-time)) cubic-bezier(0.8, 0, 0.33, 1.25);
+        cursor: pointer;
+        z-index: 10;
+        align-content: center;
+        display: none;
+
+        &.close {
+          .line {
+            &__1 {
+              transform: rotate(45deg) translate(0px, -5px);
+            }
+            &__2 {
+              transform: rotate(-45deg);
+            }
+            &__3 {
+              transform: rotate(45deg) translate(-2px, 3px);
+              opacity: 0;
+            }
+          }
+        }
+        .line {
+          width: var(--icon-width);
+          background: $extraDarkTextColor;
+          height: 2px;
+          margin: 3px 0;
+          transition: all calc(var(--transition-time) + 100ms) cubic-bezier(0.9, 0, 0.33, 1);
+          &__1 {
+            width: var(--icon-width);
+            transform-origin: left;
+          }
+          &__2 {
+            width: var(--icon-width);
+            transform-origin: center;
+          }
+          &__3 {
+            width: var(--icon-width);
+            transform-origin: right;
+          }
+        }
+        @media screen and (max-width: 1030px) {
+          display: block;
+        }
+      }
+
+      .logo-box {
+        @include flex_verticalAlign(center);
+        gap: 4px;
+
+        .logo-title {
+          font-family: 'odibee_sans-regular';
+          font-size: 29px;
+          color: #272626;
+        }
       }
     }
+
+    .mobile-menu {
+      --transition-time: 500ms;
+      position: absolute;
+      left: -50px;
+      top: 120%;
+      width: 400px;
+      display: flex;
+      align-items: center;
+      background-color: #cecece;
+      border-radius: 12px;
+      backdrop-filter: blur(20px);
+      transform: translateX(-100%);
+      transition: all 800ms cubic-bezier(0.8, 0, 0.33, 1);
+      z-index: 4;
+      display: none;
+
+      a {
+        text-transform: uppercase;
+        font-size: 1.4rem;
+        font-weight: 900;
+        letter-spacing: 3px;
+        text-decoration: none;
+        user-select: none;
+        color: #fff;
+      }
+
+      .nav-links {
+        --link-height: 60px;
+        position: relative;
+        width: 100%;
+        padding: 20px;
+
+        li {
+          @include flex_AlignBooth(center, center);
+          position: relative;
+          width: 100%;
+          height: var(--link-height);
+          list-style: none;
+          opacity: 0;
+          transform: translateX(-50%);
+          transition: all var(--transition-time) cubic-bezier(0.8, 0, 0.33, 0.9);
+          transition-delay: calc(30ms + var(--delay));
+          cursor: pointer;
+          z-index: 8;
+
+          &:hover {
+            a {
+              color: $darkTextColor;
+            }
+          }
+          a {
+            pointer-events: none;
+          }
+        }
+      }
+
+      &.nav-open {
+        transform: translateX(0%);
+        left: 0px;
+        .menu-btn {
+          right: 10%;
+        }
+        .nav-links {
+          li {
+            transform: translateX(0);
+            opacity: 1;
+          }
+        }
+      }
+      @media screen and (max-width: 1030px) {
+        display: block;
+      }
+    }
+
     .nav-bar {
       @include flex_verticalAlign(center);
 
@@ -65,6 +197,10 @@ header {
             }
           }
         }
+      }
+
+      @media screen and (max-width: 1030px) {
+        display: none;
       }
     }
     .tools-box {
@@ -85,6 +221,13 @@ header {
           &::placeholder {
             font-family: 'Open Sans-Regular';
             color: #a5a5a5;
+          }
+          @media screen and (max-width: 630px) {
+            width: 200px;
+          }
+
+          @media screen and (max-width: 630px) {
+            display: none;
           }
         }
         .search-btn {
@@ -146,6 +289,13 @@ main {
           span {
             color: $orangeColor;
           }
+
+          @media screen and (max-width: 1040px) {
+            font-size: 35px;
+          }
+          @media screen and (max-width: 810px) {
+            text-align: center;
+          }
         }
         .text {
           color: $lightGrayTextColor;
@@ -200,7 +350,22 @@ main {
               }
             }
           }
+          @media screen and (max-width: 1040px) {
+            justify-content: center;
+          }
         }
+      }
+      .picture {
+        @media screen and (max-width: 1040px) {
+          width: 380px;
+        }
+        @media screen and (max-width: 390px) {
+          width: 250px;
+        }
+      }
+      @media screen and (max-width: 810px) {
+        flex-direction: column;
+        gap: 20px;
       }
     }
   }
@@ -208,6 +373,8 @@ main {
     margin-bottom: 120px;
     .wrapper {
       .companies-logos-box {
+        flex-wrap: wrap;
+        gap: 10px 20px;
         margin-bottom: 66px;
         @include flex_AlignBooth(space-between, center);
 
@@ -237,6 +404,9 @@ main {
             height: 104px;
           }
         }
+        @media screen and (max-width: 900px) {
+          justify-content: center;
+        }
       }
       .steps-for-job-box {
         .mini-title {
@@ -245,6 +415,11 @@ main {
           color: $orangeColor;
           letter-spacing: 0.05em;
           margin-bottom: 19px;
+
+          @media screen and (max-width: 880px) {
+            text-align: center;
+            margin-bottom: 10px;
+          }
         }
         .flex-box {
           display: flex;
@@ -258,11 +433,18 @@ main {
               line-height: 125%;
               letter-spacing: 0.05em;
               margin-bottom: 46px;
+              text-align: center;
+
+              @media screen and (max-width: 1030px) {
+                margin-bottom: 10px;
+                font-size: 30px;
+              }
             }
             .accordion {
               .accordion-item {
                 margin-bottom: 22px;
                 border: initial;
+                max-width: 425px;
 
                 .accordion-header {
                   .accordion-button {
@@ -349,13 +531,33 @@ main {
                 &:last-child {
                   margin-bottom: initial;
                 }
+
+                @media screen and (max-width: 880px) {
+                  margin-bottom: 10px;
+                  max-width: initial;
+                }
               }
+            }
+            @media screen and (max-width: 880px) {
+              width: 90%;
             }
           }
           .video-box {
             position: relative;
-            width: 635px;
-            height: 433px;
+            align-content: center;
+
+            .video-screensaver {
+              @media screen and (max-width: 1030px) {
+                width: 450px;
+              }
+
+              @media screen and (max-width: 490px) {
+                width: 300px;
+              }
+              @media screen and (max-width: 310px) {
+                width: 250px;
+              }
+            }
 
             .play-btn {
               cursor: pointer;
@@ -371,8 +573,20 @@ main {
               }
             }
           }
+          @media screen and (max-width: 880px) {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+          }
+        }
+        @media screen and (max-width: 880px) {
+          flex-direction: column;
+          align-items: center;
         }
       }
+    }
+    @media screen and (max-width: 1040px) {
+      margin-bottom: 40px;
     }
   }
   section.why-choose-us {
@@ -386,10 +600,22 @@ main {
         .title {
           @include title-in-header-box;
           margin-bottom: 20px;
+
+          @media screen and (max-width: 1030px) {
+            margin-bottom: 10px;
+            font-size: 30px;
+          }
         }
         .text {
           @include text-in-header-box;
           margin-bottom: 60px;
+
+          @media screen and (max-width: 1030px) {
+            margin-bottom: 20px;
+          }
+        }
+        @media screen and (max-width: 1030px) {
+          margin-bottom: 20px;
         }
       }
       .cards-box {
@@ -443,8 +669,18 @@ main {
             @include card-hover;
             transform: translateY(-15px);
           }
+
+          @media screen and (max-width: 900px) {
+            padding: 20px;
+          }
+        }
+        @media screen and (max-width: 900px) {
+          flex-wrap: wrap;
         }
       }
+    }
+    @media screen and (max-width: 1040px) {
+      margin-bottom: 40px;
     }
   }
   section.featured-jobs {
@@ -457,9 +693,17 @@ main {
 
       .title {
         @include title-in-header-box;
+
+        @media screen and (max-width: 1030px) {
+          margin-bottom: 10px;
+          font-size: 30px;
+        }
       }
       .text {
         @include text-in-header-box;
+      }
+      @media screen and (max-width: 1030px) {
+        margin-bottom: 20px;
       }
     }
 
@@ -495,6 +739,31 @@ main {
             fill: #fff;
           }
         }
+        @media screen and (max-width: 1030px) {
+          position: absolute;
+          top: 50%;
+          z-index: 5;
+        }
+
+        &.slick-prev {
+          @media screen and (max-width: 1030px) {
+            left: 16px;
+          }
+        }
+        &.slick-next {
+          @media screen and (max-width: 1030px) {
+            right: 16px;
+          }
+        }
+
+        @media screen and (max-width: 1030px) {
+          width: 30px;
+          height: 30px;
+        }
+      }
+
+      @media screen and (max-width: 1030px) {
+        position: static;
       }
     }
 
@@ -508,6 +777,14 @@ main {
         .slick-track {
           display: flex;
           gap: 65px;
+
+          @media screen and (max-width: 1350px) {
+            gap: 20px;
+          }
+
+          @media screen and (max-width: 700px) {
+            gap: initial;
+          }
         }
       }
 
@@ -516,7 +793,7 @@ main {
         flex-direction: column;
         align-items: center;
         padding: 47px 75px;
-        max-width: 380px;
+        width: 380px;
         cursor: initial;
 
         .more-box {
@@ -555,6 +832,7 @@ main {
           letter-spacing: 0.02em;
           color: #323232;
           margin-bottom: 16px;
+          text-align: center;
         }
         .team {
           color: $violetTextColor;
@@ -626,6 +904,7 @@ main {
           }
           .apply-btn {
             @include violet-button;
+            text-wrap: nowrap;
 
             &:hover {
               @include violet-button-hover;
@@ -636,6 +915,19 @@ main {
           @include card-hover;
           transform: translateY(-35px);
         }
+
+        @media screen and (max-width: 1030px) {
+          padding: 25px 20px;
+        }
+        // @media screen and (max-width: 915px) {
+        //   width: 250px;
+        // }
+      }
+
+      @media screen and (max-width: 1030px) {
+        padding-left: initial;
+        padding-right: initial;
+        padding-bottom: 30px;
       }
     }
     .btn-box {
@@ -649,6 +941,16 @@ main {
         }
       }
     }
+
+    @media screen and (max-width: 1030px) {
+      padding-left: 60px;
+      padding-right: 60px;
+      margin-bottom: 40px;
+    }
+    @media screen and (max-width: 390px) {
+      padding-left: initial;
+      padding-right: initial;
+    }
   }
   section.customers-review {
     margin-bottom: 119px;
@@ -661,9 +963,21 @@ main {
 
         .title {
           @include title-in-header-box;
+
+          @media screen and (max-width: 1030px) {
+            margin-bottom: 10px;
+            font-size: 30px;
+          }
         }
         .text {
           @include text-in-header-box;
+
+          @media screen and (max-width: 1030px) {
+            margin-bottom: 20px;
+          }
+        }
+        @media screen and (max-width: 1030px) {
+          margin-bottom: 20px;
         }
       }
       .slick-slider {
@@ -681,6 +995,9 @@ main {
               background-color: $backgroundColor;
 
               .person-picture {
+                @media screen and (max-width: 740px) {
+                  width: 200px;
+                }
               }
               .content-box {
                 .name {
@@ -689,12 +1006,19 @@ main {
                   letter-spacing: 0.02em;
                   color: #323232;
                   margin-bottom: 13px;
+
+                  @media screen and (max-width: 650px) {
+                    text-align: center;
+                  }
                 }
                 .post {
                   font-family: 'Open Sans-Regular';
                   letter-spacing: 0.02em;
                   color: #868686;
                   margin-bottom: 16px;
+                  @media screen and (max-width: 650px) {
+                    text-align: center;
+                  }
                 }
                 .rating-box {
                   @include flex_AlignBooth(end, center);
@@ -731,6 +1055,9 @@ main {
                       mask: url('./../img/icons/star-filled.svg') repeat-x;
                       mask-size: calc(var(--star-size) + var(--gap)) var(--star-size);
                     }
+                  }
+                  @media screen and (max-width: 650px) {
+                    justify-content: center;
                   }
                 }
                 .text {
@@ -813,10 +1140,17 @@ main {
                   }
                 }
               }
+              @media screen and (max-width: 650px) {
+                flex-direction: column;
+                gap: 10px;
+              }
             }
           }
         }
       }
+    }
+    @media screen and (max-width: 1040px) {
+      margin-bottom: 40px;
     }
   }
   section.statistics {
@@ -828,6 +1162,8 @@ main {
         background-color: #ced5f4;
         padding: 74px 120px;
         @include flex_AlignBooth(space-between, center);
+        flex-wrap: wrap;
+        gap: 20px;
 
         .statistic-item {
           .statistic-quantity {
@@ -837,6 +1173,11 @@ main {
             letter-spacing: 0.02em;
             margin-bottom: 14px;
             text-align: center;
+
+            @media screen and (max-width: 920px) {
+              font-size: 30px;
+              margin-bottom: 8px;
+            }
           }
           .statistic-name {
             display: block;
@@ -844,9 +1185,24 @@ main {
             letter-spacing: 0.02em;
             color: #fff;
             text-align: center;
+            @media screen and (max-width: 920px) {
+              font-size: 14px;
+            }
           }
         }
+
+        @media screen and (max-width: 920px) {
+          padding-right: 20px;
+          padding-left: 20px;
+        }
+
+        @media screen and (max-width: 550px) {
+          justify-content: center;
+        }
       }
+    }
+    @media screen and (max-width: 1040px) {
+      margin-bottom: 40px;
     }
   }
   section.pricing-plan {
@@ -860,13 +1216,26 @@ main {
 
         .title {
           @include title-in-header-box;
+
+          @media screen and (max-width: 1030px) {
+            margin-bottom: 10px;
+            font-size: 30px;
+          }
         }
         .text {
           @include text-in-header-box;
+
+          @media screen and (max-width: 1030px) {
+            margin-bottom: 20px;
+          }
+        }
+        @media screen and (max-width: 1030px) {
+          margin-bottom: 20px;
         }
       }
       .cards-box {
         @include flex_horizonAlign(space-between);
+        gap: 20px;
 
         .card {
           @include card;
@@ -933,8 +1302,19 @@ main {
             @include card-hover;
             transform: translateY(-30px);
           }
+
+          @media screen and (max-width: 1145px) {
+            padding: 20px;
+          }
+        }
+        @media screen and (max-width: 850px) {
+          flex-wrap: wrap;
+          justify-content: center;
         }
       }
+    }
+    @media screen and (max-width: 1040px) {
+      margin-bottom: 40px;
     }
   }
 }
@@ -948,6 +1328,8 @@ footer {
       @include flex_horizonAlign(space-between);
       padding-bottom: 98px;
       border-bottom: 2px solid #625bae;
+      flex-wrap: wrap;
+      gap: 30px;
 
       .categories-box {
         .title {
@@ -956,6 +1338,7 @@ footer {
           letter-spacing: 0.05em;
           font-size: 24px;
           margin-bottom: 28px;
+          text-align: center;
         }
         .categories {
           li {
@@ -977,6 +1360,13 @@ footer {
           }
         }
       }
+
+      @media screen and (max-width: 980px) {
+        padding-bottom: 20px;
+      }
+      @media screen and (max-width: 800px) {
+        justify-content: center;
+      }
     }
     .footer-nav-bar {
       @include flex_AlignBooth(space-between, center);
@@ -995,6 +1385,7 @@ footer {
       }
       .nav-bar-menu {
         display: flex;
+        flex-wrap: wrap;
 
         li {
           line-height: 217%;
@@ -1017,6 +1408,7 @@ footer {
       .social-media-box {
         display: flex;
         gap: 8px;
+        flex-wrap: wrap;
 
         .social-media-item {
           display: flex;
@@ -1045,5 +1437,8 @@ footer {
         }
       }
     }
+  }
+  @media screen and (max-width: 980px) {
+    padding-top: 20px;
   }
 }
